fix a lot of things i cant remember